[tool.poetry]
name = "eduhub-bot"
version = "0.1.0"
description = ""
authors = ["sina rasouli <sinarasouli79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^21.1.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
